[package]
authors = ["Rafael Varago <varago.rafael@gmail.com>"]
categories = ["rust-patterns"]
description = "A thin abstraction over polymorphic environments"
documentation = "https://docs.rs/haz"
edition = "2018"
keywords = ["haz", "config"]
license = "MIT"
name = "haz"
readme = "README.md"
repository = "https://github.com/rvarago/haz-rs"
version = "0.1.1"
